--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,13 @@
 body {
     background-color: black;
     font-family: 'Roboto', sans-serif;
-    margin: 20px;
+    margin: 30px;
 }
 
 .container {
     width: 960px;
     margin: 0 auto;
+    color: white;
 }
 /* TODO: Add css here */
 .tabs {
